--- a/.eslintrc
+++ b/.eslintrc
@@ -1,17 +1,20 @@
 {
-  "ecmaFeatures": {
-    "jsx": true,
-    "modules": true
-  },
-  "env": {
-    "browser": true,
-    "node": true
-  },
-  "parser": "babel-eslint",
-  "rules": {
-    "quotes": [2, "double"]
-  },
-  "plugins": [
-    "react"
-  ]
+    "ecmaFeatures": {
+        "jsx": true,
+        "modules": true
+    },
+    "env": {
+        "browser": true,
+        "node": true,
+        "commonjs": true
+    },
+    "parser": "babel-eslint",
+    "rules": {
+        "quotes": [ "error", "double" ]
+    },
+    "plugins": [
+        "react"
+    ],
+    "extends": "eslint:recommended",
+    "root": false
 }
