--- a/package.json
+++ b/package.json
@@ -10,52 +10,49 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "babel-core": "^6.7.2",
-    "babel-eslint": "^5.0.0",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.5.0",
-    "babel-preset-stage-0": "^6.5.0",
-    "browser-sync": "^2.11.1",
-    "connect-history-api-fallback": "^1.1.0",
-    "copy-webpack-plugin": "^1.1.1",
-    "eslint": "^2.4.0",
-    "eslint-plugin-react": "^4.2.3",
-    "react-hot-loader": "^1.3.0",
-    "webpack-dev-middleware": "^1.5.1",
-    "webpack-dev-server": "^1.14.1",
-    "webpack-hot-middleware": "^2.10.0"
+    "babel-core": "6.7.2",
+    "babel-eslint": "6.0.0-beta.6",
+    "babel-preset-es2015": "6.6.0",
+    "babel-preset-react": "6.5.0",
+    "babel-preset-stage-0": "6.5.0",
+    "browser-sync": "2.11.1",
+    "connect-history-api-fallback": "1.1.0",
+    "eslint": "2.4.0",
+    "eslint-plugin-react": "4.2.3",
+    "react-hot-loader": "1.3.0",
+    "webpack-dev-middleware": "1.5.1",
+    "webpack-dev-server": "1.14.1",
+    "webpack-hot-middleware": "2.10.0"
   },
   "dependencies": {
-    "autoprefixer": "^6.3.3",
-    "axios": "^0.9.1",
-    "babel": "^6.5.2",
-    "babel-core": "^6.7.2",
-    "babel-loader": "^6.2.4",
-    "babel-plugin-transform-regenerator": "^6.6.5",
-    "babel-polyfill": "^6.7.2",
-    "classnames": "^2.2.3",
-    "css-loader": "^0.23.1",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "^0.8.5",
-    "html-webpack-plugin": "^2.10.0",
-    "less": "^2.6.1",
-    "less-loader": "^2.2.2",
-    "postcss": "^5.0.19",
-    "postcss-import": "^8.0.2",
-    "postcss-loader": "^0.8.2",
-    "react": "^0.14.7",
-    "react-dom": "^0.14.7",
-    "react-redux": "^4.4.1",
-    "react-router": "^2.0.1",
-    "redux": "^3.3.1",
-    "redux-actions": "^0.9.1",
-    "redux-saga": "^0.9.4",
-    "redux-thunk": "^2.0.1",
+    "autoprefixer": "6.3.3",
+    "axios": "0.9.1",
+    "babel": "6.5.2",
+    "babel-core": "6.7.2",
+    "babel-loader": "6.2.4",
+    "babel-polyfill": "6.7.2",
+    "classnames": "2.2.3",
+    "css-loader": "0.23.1",
+    "extract-text-webpack-plugin": "1.0.1",
+    "file-loader": "0.8.5",
+    "less": "2.6.1",
+    "less-loader": "2.2.2",
+    "postcss": "5.0.19",
+    "postcss-import": "8.0.2",
+    "postcss-loader": "0.8.2",
+    "react": "15.0.0-rc.2",
+    "react-dom": "15.0.0-rc.2",
+    "react-redux": "4.4.1",
+    "react-router": "2.0.1",
+    "redux": "3.3.1",
+    "redux-actions": "0.9.1",
+    "redux-saga": "0.9.4",
+    "redux-thunk": "2.0.1",
     "retail-ui": "git+ssh://git@git.skbkontur.ru:catalogue/retail-ui.git",
-    "style-loader": "^0.13.0",
-    "url-loader": "^0.5.7",
-    "webpack": "^1.12.14",
-    "webpack-merge": "^0.8.4",
-    "webpack-notifier": "^1.3.0"
+    "style-loader": "0.13.0",
+    "url-loader": "0.5.7",
+    "webpack": "1.12.14",
+    "webpack-merge": "0.8.4",
+    "webpack-notifier": "1.3.0"
   }
 }
