--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-dom": "15.0.0-rc.2",
     "react-redux": "4.4.1",
     "react-router": "2.0.1",
+    "reduce-reducers": "0.1.2",
     "redux": "3.3.1",
     "redux-actions": "0.9.1",
     "redux-saga": "0.9.4",
