--- a/package.json
+++ b/package.json
@@ -15,13 +15,11 @@
     "babel-preset-es2015": "6.6.0",
     "babel-preset-react": "6.5.0",
     "babel-preset-stage-0": "6.5.0",
-    "browser-sync": "2.11.1",
-    "connect-history-api-fallback": "1.1.0",
     "eslint": "2.4.0",
     "eslint-plugin-react": "4.2.3",
+    "express": "4.13.4",
     "react-hot-loader": "1.3.0",
     "webpack-dev-middleware": "1.5.1",
-    "webpack-dev-server": "1.14.1",
     "webpack-hot-middleware": "2.10.0"
   },
   "dependencies": {
