--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "extract-text-webpack-plugin": "1.0.1",
     "file-loader": "0.8.5",
     "gsap": "1.18.2",
+    "immutable": "3.8.1",
     "jquery": "2.2.3",
     "less": "2.6.1",
     "less-loader": "2.2.2",
@@ -44,8 +45,11 @@
     "postcss-loader": "0.8.2",
     "react": "15.0.0-rc.2",
     "react-dom": "15.0.0-rc.2",
+    "react-redux": "4.4.5",
     "react-router": "2.0.1",
     "reduce-reducers": "0.1.2",
+    "redux": "3.5.2",
+    "redux-saga": "0.10.0",
     "retail-ui": "git+ssh://git@git.skbkontur.ru:catalogue/retail-ui.git",
     "style-loader": "0.13.0",
     "url-loader": "0.5.7",
