--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,3 @@
 {
-  "presets": ["es2015", "stage-0", "react"],
-  "plugins": ["transform-regenerator"]
+  "presets": ["es2015", "stage-0", "react"]
 }
