--- a/package.json
+++ b/package.json
@@ -45,11 +45,13 @@
     "postcss-loader": "0.8.2",
     "react": "15.0.0-rc.2",
     "react-dom": "15.0.0-rc.2",
+    "react-motion": "0.4.3",
     "react-redux": "4.4.5",
     "react-router": "2.0.1",
     "reduce-reducers": "0.1.2",
     "redux": "3.5.2",
     "redux-saga": "0.10.0",
+    "reelm": "0.0.4",
     "retail-ui": "git+ssh://git@git.skbkontur.ru:catalogue/retail-ui.git",
     "style-loader": "0.13.0",
     "url-loader": "0.5.7",
