--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "jquery": "2.2.3",
     "less": "2.6.1",
     "less-loader": "2.2.2",
+    "popper.js": "0.3.6",
     "postcss": "5.0.19",
     "postcss-import": "8.0.2",
     "postcss-loader": "0.8.2",
