--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "reduce-reducers": "0.1.2",
     "redux": "3.5.2",
     "redux-saga": "0.10.0",
-    "reelm": "0.0.5",
+    "reelm": "0.1.x",
     "retail-ui": "git+ssh://git@git.skbkontur.ru:catalogue/retail-ui.git",
     "style-loader": "0.13.0",
     "url-loader": "0.5.7",
